# naiwa-pet

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
public/pets/naiwa/: audio.m4a  manifest.json
scripts/: generate-pet-assets.mjs
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
