[package]
name = "naiwa-pet"
version = "0.1.0"
description = "A lightweight desktop pet."
authors = ["Naiwa Pet"]
edition = "2021"

[lib]
name = "naiwa_pet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
